info display has all nibbles, can zoom now, saving implemented

--- a/BM64_LevelCreator/BM64_LevelCreator.csproj
+++ b/BM64_LevelCreator/BM64_LevelCreator.csproj
@@ -90,5 +90,11 @@
   <ItemGroup>
     <None Include="assets\images\DPad.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\images\Zoomlenses.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\images\Zoom.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
